Ingress/nginx_controller/deploymenmt.yaml
  apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: netflix-deployment
  spec:
    replicas: 4
    selector:
      matchLabels:
        app: netflix
    template:
      metadata:
        labels:
          app: netflix
      spec:
         containers:
         - name: netflix-cont
           image: devopsinsiders/netflix-clone
           ports:
           - containerPort: 80
