Ingress/nginx_controller/cluster-service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: netflix-svc
  spec:
    ports:
    - port: 3200
      targetPort: 80
    selector:
     app: netflix
