Ingress/nginx_controller/ingress.yaml
  apiVersion: networking.k8s.io/v1
  kind: Ingress
  metadata: 
    name: netflix-router
  spec:
    ingressClassName: nginx
    rules:
    - host: g.raghavcorporation.online
      http:
        paths:
        - backend: 
            service: 
              name: netflix-svc
              port: 
                number: 3200
          path: /
          pathType: Prefix
